<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/top_gray"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:background="@color/top_gray" >

        <ImageButton
            android:id="@+id/btn_return"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="#00000000"
            android:src="@drawable/png_left" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/cam_repass"
            android:textAppearance="?android:attr/textAppearanceMedium"
            style="@style/HeadTitleTextStyle"/>

        <TextView
            android:id="@+id/btn_sure"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/blue_green"
            android:text="@string/ok" />

    </RelativeLayout>
    
    <LinearLayout 
		android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
        <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="46dp"
		    android:padding="4dp"
		    android:orientation="horizontal"
		    android:background="@color/white">
			<TextView 
				android:layout_width="80dp"
	        	android:layout_height="wrap_content"
	        	android:layout_marginLeft="5dp"
	        	android:textSize="18sp"
	        	android:textColor="#393939"
	        	android:text="@string/cam_repass_password"/>
		    <com.jia.ezcamera.utils.MyEditText
		        android:id="@+id/cam_repass_password"
		        android:layout_width="match_parent"
		        android:layout_height="40dp"
		        android:layout_marginLeft="5dp"
		        android:background="@color/white"
		        android:ems="10"
		        android:hint="@string/cam_repass_password_hint"
		        android:maxLength="64" />
		</LinearLayout>
		
        
        <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="46dp"
		    android:layout_marginTop="2px"
		    android:padding="4dp"
		    android:orientation="horizontal"
		    android:background="@color/white">
		    
            <TextView 
				android:layout_width="80dp"
	        	android:layout_height="wrap_content"
	        	android:layout_marginLeft="5dp"
	        	android:textSize="18sp"
	        	android:textColor="#393939"
	        	android:text="@string/cam_repass_newpassword"/>

		    <com.jia.ezcamera.utils.MyEditText
		        android:id="@+id/cam_repass_newpassword1"
		        android:layout_width="match_parent"
		        android:layout_height="40dp"
		        android:layout_marginLeft="5dp"
		        android:background="@color/white"
		        android:ems="10"
		        android:hint="@string/cam_repass_newpassword_hint1"
		        android:maxLength="64" />
		</LinearLayout>
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="46dp"
		    android:layout_marginTop="2px"
		    android:padding="4dp"
		    android:orientation="horizontal"
		    android:background="@color/white">
		    
		    <TextView 
				android:layout_width="80dp"
	        	android:layout_height="wrap_content"
	        	android:layout_marginLeft="5dp"
	        	android:textSize="18sp"
	        	android:textColor="#393939"
	        	android:text="@string/cam_repass_newpassword2"/>

		    <com.jia.ezcamera.utils.MyEditText
		        android:id="@+id/cam_repass_newpassword2"
		        android:layout_width="match_parent"
		        android:layout_height="40dp"
		        android:layout_marginLeft="5dp"
		        android:background="@color/white"
		        android:ems="10"
		        android:hint="@string/cam_repass_newpassword_hint2"
		        android:maxLength="64" />
		</LinearLayout>
    </LinearLayout>
    

    
</LinearLayout>