<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:minWidth="10000dp"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:id="@+id/textView_message"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/action_sheet_top_normal"
        android:gravity="center"
        android:text="@string/photo_hint"
        android:textColor="@color/common_text_gray_thin"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView_button1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/selector_action_sheet_middle"
        android:gravity="center"
        android:text="@string/take_photo"
        android:textColor="@color/gray"
        android:textSize="17sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView_button2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/selector_action_sheet_bottom"
        android:gravity="center"
        android:text="@string/photo"
        android:textColor="@color/gray"
        android:textSize="17sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView_button3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_action_sheet_single"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/common_red"
        android:textSize="17sp" />

</LinearLayout>