<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/main_head"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/top_gray"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/toptext"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/previous"
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:background="@drawable/png_left_gray" />

        <Button
            android:id="@+id/next"
            android:layout_width="44dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/png_right_gray" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@color/white"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sunday"
                android:textColor="#000000" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/monday"
                android:textColor="#000000" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tuesday"
                android:textColor="#000000" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/wednesday"
                android:textColor="#000000" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/thursday"
                android:textColor="#000000" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/friday"
                android:textColor="#000000" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/saturday"
                android:textColor="#000000" />
        </LinearLayout>

        <GridView
            android:id="@+id/gridView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:minHeight="100dp"
            android:numColumns="7" >
        </GridView>
    </LinearLayout>

</LinearLayout>