<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/top_gray"
    android:orientation="vertical">
  <TextView 
	android:id="@+id/title_text"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:textSize="@dimen/set_device_text_size"
	android:background="@color/white"
	android:paddingLeft="50dp"
	android:paddingRight="50dp"
	android:paddingTop="20dp"
	android:paddingBottom="20dp"
	android:gravity="center"
	android:textColor="#393939"
	android:text="@string/cam_del_hint"/>

	<ImageView
		android:id="@+id/dialog_image_hint"
		android:layout_width="match_parent"
		android:layout_height="200dp"
		android:visibility="gone"
		android:background="@color/white"
		android:scaleType="fitCenter"
		android:src="@drawable/png_qrcode_dialog"/>
  
  
  <RelativeLayout
	android:id="@+id/dialog_et_layout"
    android:layout_width="match_parent"
    android:layout_height="46dp"
    android:padding="4dp"
    android:visibility="gone"
    android:background="@drawable/edittext_background">
	
    <com.vveye.ezcam.utils.MyEditText
        android:id="@+id/dialog_et"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="5dp"
        android:background="@color/white"
        android:hint="@string/enter_phonenumber"
        android:maxLength="64" />
	</RelativeLayout>
  
  
  <TextView 
	android:id="@+id/sure_text"
	android:layout_width="match_parent"
	android:layout_height="50dp"
	android:textSize="@dimen/set_device_text_size"
	android:background="@color/white"
	android:layout_marginTop="2px"
	android:gravity="center"
	android:textColor="@color/red"
	android:text="@string/cam_del"/>
  
  <TextView 
      android:id="@+id/cancel_text"
	android:layout_width="match_parent"
	android:layout_height="50dp"
	android:textSize="@dimen/set_device_text_size"
	android:background="@color/white"
	android:layout_marginTop="2px"
	android:gravity="center"
	android:textColor="#393939"
	android:text="@string/cancel"/>

</LinearLayout>